--- a/app/src/main/res/drawable/shape_setting_textview_true.xml
+++ b/app/src/main/res/drawable/shape_setting_textview_true.xml
@@ -3,7 +3,7 @@
     <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
-        android:color="#000" />
+        android:color="@color/black" />
     <size
         android:width="100dp"
         android:height="30dp" />
