--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,7 +22,8 @@
         android:layout_above="@+id/main_24hour_textview"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="20dp"
         android:textStyle="bold"
         tools:text="0개의 할 일이 남아있습니다." />
 
@@ -31,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:text="24시간 남은 할 일이 0개 있습니다." />
