feat : 코드 수정(xml 대신 java로 동적으로 UI 작성 해야함)
BaseFrameActivity Sub class 제거
CreateActivity Intent 최적화
DBHelper week_list TABLE 제거
ListFramgent 코드 최적화
PenaltyActivity Intent 최적화, 코드 최적화

--- a/app/src/main/res/layout/customview_success.xml
+++ b/app/src/main/res/layout/customview_success.xml
@@ -18,7 +18,8 @@
         android:textColor="@color/back_ground_color"
         android:textSize="30sp"
         android:textStyle="bold"
-        tools:text="캐드 연습" />
+        tools:text="캐드 연습"
+        />
 
     <TextView
         android:id="@+id/custom_success_date"
