--- a/app/src/main/res/layout/customview_list.xml
+++ b/app/src/main/res/layout/customview_list.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:layout_marginLeft="25dp"
-    android:layout_marginTop="20dp"
     android:layout_marginRight="25dp"
+    android:layout_marginBottom="20dp"
     android:background="@color/main_color">
 
     <TextView
